Fix search button on mobile

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -53,8 +53,8 @@ input {
 }
 
 @media (max-width: 1100px) {
-  .searchButton {
-    height: 20%;
-    width: 20%;
+  .searchButton > img {
+    width: 700%;
+    height: auto;
   }
 }
